# db/models/node.js
@@ -11,7 +11,7 @@ module.exports = (sequelize, DataTypes) => {
      */
     static associate(models) {
       // define association here
-      Node.belongsTo(models.Blockchain, {foreignKey: 'blockchain_id'})
+      Node.belongsTo(models.Blockchain, {foreignKey: 'blockchain_id', onDelete: 'CASCADE'})
     }
   }
   Node.init({
